{
  "version": 4,
  "terraform_version": "0.12.0",
  "serial": 70,
  "lineage": "d9bc0e99-f7d9-8269-9dae-91a0e5569d61",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "example",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-082f3b8790103011f",
            "arn": "arn:aws:ec2:eu-west-1:500345788222:instance/i-0eb7c2a62d5659a67",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0eb7c2a62d5659a67",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mani_key",
            "monitoring": false,
            "primary_network_interface_id": "eni-04131566ea0472ae8",
            "private_dns": "ip-10-0-1-124.eu-west-1.compute.internal",
            "private_ip": "10.0.1.124",
            "public_dns": "ec2-34-241-191-195.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.241.191.195",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-0bf0480687d517cef",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b81edeeb9298008d",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0242fdc793b34c923"
            ]
          },
          "depends_on": [
            "aws_key_pair.mykeypair",
            "aws_security_group.allow-ssh",
            "aws_subnet.main-public-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-05191c7887a2f5e39",
            "owner_id": "500345788222",
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-08e5c7ae65d3d04f2"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-05063f4cd872b799d",
            "owner_id": "500345788222",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05191c7887a2f5e39",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-public-1"
            },
            "vpc_id": "vpc-08e5c7ae65d3d04f2"
          },
          "depends_on": [
            "aws_internet_gateway.main-gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-1-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b351a8ab0cb27e0",
            "route_table_id": "rtb-05063f4cd872b799d",
            "subnet_id": "subnet-0b81edeeb9298008d"
          },
          "depends_on": [
            "aws_route_table.main-public",
            "aws_subnet.main-public-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-2-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02801a6e111034a9b",
            "route_table_id": "rtb-05063f4cd872b799d",
            "subnet_id": "subnet-0f21362668067f93a"
          },
          "depends_on": [
            "aws_route_table.main-public",
            "aws_subnet.main-public-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-3-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-017a3e2410a75dc1f",
            "route_table_id": "rtb-05063f4cd872b799d",
            "subnet_id": "subnet-0964a4cc740fa8436"
          },
          "depends_on": [
            "aws_route_table.main-public",
            "aws_subnet.main-public-3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:500345788222:security-group/sg-0242fdc793b34c923",
            "description": "security group that allows ssh and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0242fdc793b34c923",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh",
            "name_prefix": null,
            "owner_id": "500345788222",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-08e5c7ae65d3d04f2"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:500345788222:subnet/subnet-0b18c85535a878e1f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0b18c85535a878e1f",
            "map_public_ip_on_launch": false,
            "owner_id": "500345788222",
            "tags": {
              "Name": "main-private-1"
            },
            "vpc_id": "vpc-08e5c7ae65d3d04f2"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:500345788222:subnet/subnet-0ac69b43c7960d7e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0ac69b43c7960d7e6",
            "map_public_ip_on_launch": false,
            "owner_id": "500345788222",
            "tags": {
              "Name": "main-private-2"
            },
            "vpc_id": "vpc-08e5c7ae65d3d04f2"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:500345788222:subnet/subnet-041b944a8538e264e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-041b944a8538e264e",
            "map_public_ip_on_launch": false,
            "owner_id": "500345788222",
            "tags": {
              "Name": "main-private-3"
            },
            "vpc_id": "vpc-08e5c7ae65d3d04f2"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:500345788222:subnet/subnet-0b81edeeb9298008d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0b81edeeb9298008d",
            "map_public_ip_on_launch": true,
            "owner_id": "500345788222",
            "tags": {
              "Name": "main-public-1"
            },
            "vpc_id": "vpc-08e5c7ae65d3d04f2"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:500345788222:subnet/subnet-0f21362668067f93a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0f21362668067f93a",
            "map_public_ip_on_launch": true,
            "owner_id": "500345788222",
            "tags": {
              "Name": "main-public-2"
            },
            "vpc_id": "vpc-08e5c7ae65d3d04f2"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:500345788222:subnet/subnet-0964a4cc740fa8436",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0964a4cc740fa8436",
            "map_public_ip_on_launch": true,
            "owner_id": "500345788222",
            "tags": {
              "Name": "main-public-3"
            },
            "vpc_id": "vpc-08e5c7ae65d3d04f2"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:500345788222:vpc/vpc-08e5c7ae65d3d04f2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02b45b767f35f986b",
            "default_route_table_id": "rtb-02128b10494bcf7a2",
            "default_security_group_id": "sg-04347bbb89a758e2a",
            "dhcp_options_id": "dopt-2f364749",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-08e5c7ae65d3d04f2",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02128b10494bcf7a2",
            "owner_id": "500345788222",
            "tags": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}